--- a/web/themes/custom/tallgrasschurch/src/css/components/_cards.scss
+++ b/web/themes/custom/tallgrasschurch/src/css/components/_cards.scss
@@ -13,8 +13,7 @@
 
 
   > * {
-    flex: 1 1 100%;
-    align-self: flex-start;
+    flex: 0 1 auto;
   }
 
   .card__title {
